<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords|textPersonName"
            android:padding="12dp"
            android:background="@color/gray_100" />

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:padding="12dp"
            android:background="@color/gray_100"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/input_last_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_date"
            android:inputType="date"
            android:padding="12dp"
            android:background="@color/gray_100"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/input_prev_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prev_date"
            android:inputType="date"
            android:padding="12dp"
            android:background="@color/gray_100"
            android:layout_marginTop="8dp" />

        

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_person"
            android:layout_marginTop="12dp"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:backgroundTint="@color/green_500"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>

